@@ -66,7 +66,11 @@
 				<p><a href="http://pajhome.org.uk/" target="_blank">Paul Johnston</a> - <a href="http://pajhome.org.uk/crypt/md5/sha1.html" target="_blank">SHA1</a></p>
 				<br />
 
-				<p><a href="#profile#coloristka">@coloristka</a>, <a href="#profile#stammru">@Stammru</a></p>
+				<p>
+					<a href="#profile#chakrygin">@chakrygin</a>,
+					<a href="#profile#coloristka">@coloristka</a>,
+					<a href="#profile#stammru">@Stammru</a>,
+				</p>
 
 				<hr />
 
