@@ -1,3 +1,6 @@
+In development
+	* Home timeline max height bug is fixed (thanks @chakrygin)
+
 0.9
 	* Fixing cursor for tweet buttons in Mac OS
 	* Extension popup now can't be larger than screen height
